# computer-use-cookbook

./: .env.example  .gitignore  ARCHITECTURE.md  COOKBOOK.md  Makefile  PLAN.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  SUMMARY.md
.github/workflows/: ci.yml
curl/: README.md  quickstart.sh
curl/tests/: _png_b64.txt  smoke.sh  (+1 more)
docs/: API_NOTES.md  LIVE_VALIDATION.md
go/: Makefile  README.md  go.mod
mock/: Makefile  README.md  pyproject.toml
mock/src/coasty_mock/: __init__.py  __main__.py  actions.py  app.py  clock.py  deps.py  errors.py  middleware.py  png.py  pricing.py  pyparse.py  routes_admin.py  routes_core.py  routes_machines.py  routes_runs.py  routes_sessions.py  routes_workflows.py  sse.py  state.py  validation.py  webhooks.py  wfdsl.py  wfengine.py
mock/tests/: conftest.py  helpers.py  test_admin.py  test_auth_errors.py  test_core.py  test_machines.py  test_pricing.py  test_runs.py  test_sessions.py  test_sse.py  test_webhooks.py  test_workflows.py
python/: Makefile  README.md  pyproject.toml
python/examples/: README.md  ex01_local_predict_loop.py  ex02_grounding.py  ex03_sessions.py  ex04_parse.py  ex05_runs.py  ex06_webhook_server.py  ex07_workflows.py  ex08_machines.py  ex09_error_handling.py  ex10_cost_helper.py
python/src/coasty/: __init__.py  client.py  cost.py  dsl.py  env.py  errors.py  executor.py  sse.py  types.py  webhooks.py
python/tests/: conftest.py  test_client_inference.py  test_client_machines.py  test_client_runs.py  test_client_sessions.py  test_client_workflows.py  test_cost.py  test_dsl.py  test_env.py  test_errors.py  test_executor.py  test_retries.py  test_sse.py  test_webhooks.py
python/tests/examples/: conftest.py  test_ex01_local_predict_loop.py  test_ex02_grounding.py  test_ex03_sessions.py  test_ex04_parse.py  test_ex05_runs.py  test_ex06_webhook_server.py  test_ex07_workflows.py  test_ex08_machines.py  test_ex09_error_handling.py  test_ex10_cost_helper.py
typescript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+66 files in other folders)
