[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "coasty"
version = "0.1.0"
description = "Typed Python client for the Coasty Computer Use API (cookbook shared library)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27,<1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.14",
    "ruff>=0.6",
    "black>=24.8",
]
local = [
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "pillow>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coasty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "examples"]
warn_unreachable = true
show_error_codes = true
